<?xml version="1.0"?>
<package format="2">
  <name>nuturtlebot_msgs</name>
  <version>0.0.1</version>
  <description> Messages for low-level (raw) turtlebot3 control. </description>

  <maintainer email="elwin@northwestern.edu">Matthew Elwin</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
